DuPont DevSB/src/objects/ccrz__E_AttributeI18N__c.object
<CustomObject>
    <description>Internationalization for Attributes</description>
    <fields>
        <fullName>ccrz__AttributeI18NExtID__c</fullName>
        <externalId>true</externalId>
        <label>AttributeI18N Ext ID</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__Attribute__c</fullName>
        <description>CC Attribute this I18N is related to</description>
        <label>CC Attribute</label>
        <referenceTo>ccrz__E_Attribute__c</referenceTo>
        <relationshipLabel>CC AttributeI18Ns</relationshipLabel>
        <relationshipName>AttributeI18Ns</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ccrz__DisplayName__c</fullName>
        <description>The localized Attribute Display Name.</description>
        <label>Display Name</label>
        <length>1024</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ccrz__Locale__c</fullName>
        <description>The locale for this entry, such as &apos;en_US&apos;</description>
        <label>Locale</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>CC AttributeI18N</label>
    <nameField>
        <label>CC AttributeI18N Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC AttributeI18Ns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>